--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "framer-motion": "^12.15.0",
     "gsap": "^3.13.0",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
